feat: 快捷键更新

--- a/00_IT相关/01_键盘常用快捷键.md
+++ b/00_IT相关/01_键盘常用快捷键.md
@@ -14,9 +14,18 @@
 
     关闭页面：CTRL+W  
 
-    新建标签：CTRL+T 
+    新建标签：CTRL+T
+
+    回退前进：ALT　+ ←/→
+
+    快速定位：CTRL + G 
 ### 终端
     切换任务：ALT+TAB  
 
     屏幕保护：WIN+L
 
+    页面搜索：CTRL + F
+
+    切换任务：ALT + TAB
+
+    切换任务：ALT + SHIFT + TAB
