feat: 更新快捷键

--- a/00_IT相关/01_键盘常用快捷键.md
+++ b/00_IT相关/01_键盘常用快捷键.md
@@ -20,7 +20,9 @@
 
     快速定位：CTRL + G 
 
-    交换窗口：CTRL + SHIFT + PgUp/PgDn  
+    交换窗口：CTRL + SHIFT + PgUp/PgDn
+
+    全局搜索切换光标：enter/SHIFT + ENTER  
 ### 终端
     切换任务：ALT+TAB  
 
