--- a/03_JS/[⭐⭐⭐⭐⭐]-异步.md
+++ b/03_JS/[⭐⭐⭐⭐⭐]-异步.md
@@ -147,6 +147,25 @@ JavaScript 是单线程的，意味着它一次只能执行一段代码。如果
             return this.then(null, rejected)
         }
     }
+
+    测试数据：正常输出1、3、2、5、4
+        new PromiseN((resolve, reject) => {
+            console.log(1);
+            resolve(2)
+            console.log(3)
+            setTimeout(() => { console.log(4) }, 0)
+        }).then(res => {
+            console.log(res)
+            return new PromiseN((resolve, reject) => {
+                resolve(5)
+            }).then(res => {
+                return res
+            })
+        }).then(res => {
+            console.log(res)
+        }).catch(e => {
+            console.log('e', e)
+        })
     ```
 - **async await是Generator的语法糖，比如ES6class构造器是ES5函数构造器的语法糖**
 - 了解Generator函数
