--- a/03_JS/diff算法/分析.md
+++ b/03_JS/diff算法/分析.md
@@ -26,4 +26,13 @@ while 比较新、旧节点，传入index、补丁包
     直接写入不同补丁常量
   递归比较是否有子元素
 返回补丁包 {0:[{type:"ATTRS",attrs:{class:undefined}}]}
+
+```
+
+```mermaid
+graph TD;
+    A-->B;
+    A-->C;
+    B-->D;
+    C-->D;
 ```
