--- a/03_JS/diff算法/分析.md
+++ b/03_JS/diff算法/分析.md
@@ -1,6 +1,7 @@
 ## diff 算法
 
-创建Vdom，比较简单，在这里不做过多分析。
+创建 Vdom，比较简单，在这里不做过多分析。
+
 > [点击查看源代码](./element.js)
 
 ### 问题
@@ -11,28 +12,22 @@
 - 同级都有哪些方式？
 
 ### 模式
+
 ### 抽象
+
 - 比较的过程是怎样的？
 - 如何实现递归？
 - diff 函数中的 index 是起什么作用的？
 - 补丁包会打成什么样？
 
-### diff算法
+### diff 算法
+
 ```tefcha
-while 比较新、旧节点，传入index、补丁包
-  if 比较新旧节点是否相同
-    比较属性
-  else 
-    直接写入不同补丁常量
-  递归比较是否有子元素
-返回补丁包 {0:[{type:"ATTRS",attrs:{class:undefined}}]}
 
-```
+# Write pseudo code here
 
-```mermaid
-graph TD;
-    A-->B;
-    A-->C;
-    B-->D;
-    C-->D;
+if morning
+  hello
+end
+
 ```
