--- a/03_JS/diff算法/分析.md
+++ b/03_JS/diff算法/分析.md
@@ -2,7 +2,8 @@
 
 创建 Vdom，比较简单，在这里不做过多分析。
 
-> [点击查看源代码](./element.js)
+> [点击查看Element源代码](./element.js)
+> [点击查看diff源代码](./diff.js)
 
 ### 问题
 
@@ -20,14 +21,24 @@
 - diff 函数中的 index 是起什么作用的？
 - 补丁包会打成什么样？
 
-### diff 算法
+### diff 算法流程图
+
 
 ```tefcha
-
-# Write pseudo code here
-
-if morning
-  hello
-end
-
+while 传入新旧、当前节点index/补丁包
+    if 新旧节点是string并且新旧字符串不同
+        打补丁
+        break
+    elif 当前type相同
+        比较新旧属性
+        if 属性相同
+            比较子集是否相同
+            continue
+        else 
+            打入补丁
+            break
+    else
+        打入补丁
+        break
+end 当前递归结束
 ```
