feat: diff算法简单介绍

--- a/03_JS/diff算法/分析.md
+++ b/03_JS/diff算法/分析.md
@@ -4,6 +4,7 @@
 
 > [点击查看Element源代码](./element.js)
 > [点击查看diff源代码](./diff.js)
+> [点击查看patch源代码](./patch.js)
 
 ### 问题
 
@@ -12,33 +13,18 @@
 - 同级位置如何通过 diff 算法进行比较的
 - 同级都有哪些方式？
 
-### 模式
-
 ### 抽象
 
 - 比较的过程是怎样的？
 - 如何实现递归？
 - diff 函数中的 index 是起什么作用的？
+  - 进行深度遍历使用
 - 补丁包会打成什么样？
+  - {0:[{type:TEXT,text:'节点'}]}
 
 ### diff 算法流程图
 
-
-```tefcha
-while 传入新旧、当前节点index/补丁包
-    if 新旧节点是string并且新旧字符串不同
-        打补丁
-        break
-    elif 当前type相同
-        比较新旧属性
-        if 属性相同
-            比较子集是否相同
-            continue
-        else 
-            打入补丁
-            break
-    else
-        打入补丁
-        break
-end 当前递归结束
-```
+<img style="width:100vw;" src="http://24k.live/common/github/js/d-E.png"/>
+<img style="width:100vw;" src="http://24k.live/common/github/js/d-D.png"/>
+<img style="width:100vw;" src="http://24k.live/common/github/js/d-P.png"/>
+<img style="width:100vw;" src="http://24k.live/common/github/js/d-I.png"/>
