feat: diff算法简单介绍

--- a/03_JS/diff算法/分析.md
+++ b/03_JS/diff算法/分析.md
@@ -24,8 +24,17 @@
   - {0:[{type:TEXT,text:'节点'}]}
 
 ### diff 算法流程图
+#### 创建Element对象
+<img style="width:50vw;" src="http://24k.live/common/github/js/d-E.png"/>
+<br/>
 
-<img style="width:100vw;" src="http://24k.live/common/github/js/d-E.png"/>
-<img style="width:100vw;" src="http://24k.live/common/github/js/d-D.png"/>
-<img style="width:100vw;" src="http://24k.live/common/github/js/d-P.png"/>
-<img style="width:100vw;" src="http://24k.live/common/github/js/d-I.png"/>
+#### 比较虚拟DOM
+<img style="width:50vw;" src="http://24k.live/common/github/js/d-D.png"/>
+<br/>
+
+#### 使用补丁
+<img style="width:50vw;" src="http://24k.live/common/github/js/d-P.png"/>
+<br/>
+
+#### 总体流程
+<img style="width:50vw;" src="http://24k.live/common/github/js/d-I.png"/>
