feat: 浏览器缓存机制

--- a/02_HTML/[⭐⭐⭐⭐]-浏览器缓存机制.md
+++ b/02_HTML/[⭐⭐⭐⭐]-浏览器缓存机制.md
@@ -30,14 +30,14 @@
 
 > 浏览器缓存会根据响应头中的字段进行判断，如果不存在强缓存就使用协商缓存。
 
-- 强缓存
+- 强缓存（Cache-Control>Expires 优先级）
   - Expires：http1.0 的规范，返回一个绝对的 GMT 失效时间（较少使用，存在跨区的话可能会存在服务器时间不同，从而导致缓存不准确的问题，比较广泛使用的是 Cache-Control）
   - Cache-Control：http1.1 新增规范，通过设置 max-age 有效期进行缓存判断，除了 max-age 还有：
     - no-cache：不使用本地缓存。需要使用缓存协商，先与服务器确认返回的响应是否被更改，如果之前的响应中存在 ETag，那么请求的时候会与服务端验证，如果资源未被更改，则可以避免重新下载。
     - no-store：直接禁止游览器缓存数据，每次用户请求该资源，都会向服务器发送一个请求，每次都会下载完整的资源。
     - public：可以被所有的用户缓存，包括终端用户和 CDN 等中间代理服务器。
     - private：只能被终端用户的浏览器缓存，不允许 CDN 等中继缓存服务器对其缓存
-- 协商缓存
+- 协商缓存（Etag>Last-Modified）
   > 当强缓存失效的时候，才会去访问协商缓存  
   > 第一次请求 HTTP 返回 Last-Modified 和 Etag 两个字段，当第二次请求的时候会自动携带 if-Modified-Since/if-None-Match 两个字段对应 Last-Modified/Etag，依次校验，通过返回 304，失效返回 200 新 tag。
   - Etag：服务器返回静态资源的 token
@@ -45,7 +45,7 @@
 
 #### 总结流程图
 
-```tefcha
+<!-- ```tefcha
 浏览器请求
 通过Cache-Control/expires判断是否有强缓存
 max-age、expires服务器绝对时间是否未过期
@@ -55,7 +55,8 @@ else
     比对响应Etag/Last-Modified是否相同
     if 相同
         返回304，调用缓存
-    else 
+    else
         返回200，本地存入缓存
-结束
-```
+响应
+``` -->
+<img style="width:30vw" src="http://24k.live/common/github/html/browserCache.png" />
