--- a/01_CSS/[⭐⭐⭐⭐]-弹性布局.md
+++ b/01_CSS/[⭐⭐⭐⭐]-弹性布局.md
@@ -54,3 +54,11 @@
 1. 引入lib-flexible
 2. 下载vscode插件,px to rem...
 3. 配置vscode基准参数
+
+> 原理
+```mermaid
+stateDiagram-v2
+[*]-->得到1rem: lib-fixable将宽除100设置到html上
+得到1rem-->写入单位: 在测试分辨率上将px转换成rem
+写入单位-->实现响应式布局
+```
