--- a/03_JS/[⭐⭐⭐⭐⭐]-异步.md
+++ b/03_JS/[⭐⭐⭐⭐⭐]-异步.md
@@ -15,7 +15,7 @@
 #### 了解异步
 JavaScript 是单线程的，意味着它一次只能执行一段代码。如果一个动作需要花费很长时间（如从服务器获取数据），如果不使用异步，整个面可能会因等待而被冻结。  
 为了处理异步操作，JavaScript 提供了一些机制。  
-主要使用：回调函数、Promise、async/await，不常用的手段这里不作介绍。
+主要使用：回调函数、Promise、async/await改造异步，不常用的手段这里不作介绍。
 #### 使用异步
 - 回调函数-避免阻塞  
     ```
