--- a/03_JS/[⭐⭐⭐⭐⭐]-面向对象.md
+++ b/03_JS/[⭐⭐⭐⭐⭐]-面向对象.md
@@ -39,7 +39,7 @@ stateDiagram-v2
 - ES6
     > ES6中的构造器是通过class类实现的，通过new的方式进行挂载属性。  
     > ES6中的公共方法是通过extends继承实现的。  
-    > ES6中的继承是通过super的方式实现的
+    > ES6中的继承是通过super的方式实现的属性继承
 #### this指向的问题
 - this指向调用者
 - this指向新new的Object对象
