--- a/01_CSS/[⭐⭐⭐⭐]-弹性布局.md
+++ b/01_CSS/[⭐⭐⭐⭐]-弹性布局.md
@@ -37,7 +37,7 @@
 3. 主文件引入lib-flexible
 4. 主目录写入postcss.config.js
 5. 写入配置
-    ```
+    ```注意有些webpack本地打包不生效
     const PxToRem=require("postcss-pxtorem")
     module.exports={
         plugins:[
