feat: 原型链相关

--- a/03_JS/[⭐⭐⭐⭐⭐]-闭包.md
+++ b/03_JS/[⭐⭐⭐⭐⭐]-闭包.md
@@ -1,33 +1,9 @@
 ## 闭包相关
-
-### 思维导图
-```mermaid
-mindmap
-    闭包
-        了解闭包
-            什么是闭包？
-            闭包的特点？
-            闭包的优缺点？
-        使用闭包
-            闭包的应用场景？
-            通过闭包实现防抖节流函数？        
-```
-
-### 类似方式
-```mermaid
-timeline
-    闭包: 实现变量的私有化: 为了不污染全局变量
-```
-
-### 状态图
-```mermaid
-stateDiagram-v2
-    [*]-->闭包: 返回一个函数
-    闭包-->[*]: 局部变量在执行完毕立刻销毁
-```
+### 灵感
+- 作用域？
+- 作用域链？
 
 ### 总结
-#### 了解闭包
 - 什么是作用域？
     > 作用域是指变量的有效范围，作用域分为全局作用域和局部作用域。   
     > 作用域的作用就是防止变量间的互相干扰  
