--- a/03_JS/[⭐⭐⭐⭐⭐]-面向对象.md
+++ b/03_JS/[⭐⭐⭐⭐⭐]-面向对象.md
@@ -1,34 +1,11 @@
 ## 面向对象相关
 
 ### 思维导图
-```mermaid
-mindmap
-    面向对象
-        了解面向对象
-            什么是面向对象？
-            面向对象的特点？
-        使用面向对象
-            ES5和ES6的面向对象的区别？
-            面向对象应用场景？
-            this指向的问题？
-            箭头函数的特点？
-```
-
-### 类似方法
-```mermaid
-timeline
-    面向对象: 封装: 继承: 多态
-    技术手段: 父类写入公共属性: 父类写入公共方法方法: 子类继承父类: 子类重写父类方法
-```
-
-### 状态图
-```mermaid
-stateDiagram-v2
-    [*]-->父类: 提取公共属性/方法
-    父类-->子类: 继承父类
-    父类-->子类: 重写父类方法
-    子类-->[*]
-```
+- 了解面向对象
+- ES5和ES6的面向对象的区别？
+- this指向的问题？
+- 箭头函数的特点？
+- 什么是原型链？
 
 ### 总结
 #### ES5/6的面向对象手段
@@ -36,10 +13,13 @@ stateDiagram-v2
     > ES5中的构造器是通过构造函数实现的，通过new的方式进行挂载属性。  
     > ES5中的公共方法是通过prototype原型链的挂载实现的。  
     > ES5中的继承是通过call的方式实现的
+    [继承方法](../../images/d23d6f01475602d5a9e5a388e96a86621b9ca6c9411ca1adcf9bcf0a190406e1.png)  
 - ES6
     > ES6中的构造器是通过class类实现的，通过new的方式进行挂载属性。  
     > ES6中的公共方法是通过extends继承实现的。  
     > ES6中的继承是通过super的方式实现的属性继承
+    [继承方法](../../images/47fd09312ab327208d6fd7f5b105949d5a81c026504983fea3f3efce5c070996.png)  
+
 #### this指向的问题
 - this指向调用者
 - this指向新new的Object对象
@@ -47,9 +27,15 @@ stateDiagram-v2
 - 构造函数的prototype原型链的this指向实例对象
 - this指向触发事件的dom对象
 - 箭头函数的this指向上下文的this
-
 #### 箭头函数的特点
 - 箭头函数没有自己的this，它的this是继承而来的
 - 箭头函数没有arguments
 - 箭头函数不能作为构造函数，不能使用new 
 - 箭头函数没有super
+
+#### 什么是原型链？
+- 什么是原型链？
+  - 实例对象的__proto__指向构造器.prototype
+  - 构造器.prototype===构造器.prototype
+  - 构造器.prototype.constructor===构造器
+  - 实例对象默认会从.__proto__向原型上查找属性或者方法
