feat: 原型链相关

--- a/02_HTML/[⭐⭐⭐⭐]-浏览器缓存机制.md
+++ b/02_HTML/[⭐⭐⭐⭐]-浏览器缓存机制.md
@@ -42,7 +42,7 @@
   > 第一次请求 HTTP 返回 Last-Modified 和 Etag 两个字段，当第二次请求的时候会自动携带 if-Modified-Since/if-None-Match 两个字段对应 Last-Modified/Etag，依次校验，通过返回 304，失效返回 200 新 tag。
   - Etag：服务器返回静态资源的 token
   - Last-Modified：文件最后更新的时间戳。
-  - [查看Etag/Last-Modified/Expires](../../images/c4bf4ef821d8823a66df3a41fc9ca64ec980f939d6e81c307f3dad4edf4c524a.png)  
+  - [查看Etag/Last-Modified/Expires](../images/c4bf4ef821d8823a66df3a41fc9ca64ec980f939d6e81c307f3dad4edf4c524a.png)  
 
 
 #### 总结流程图
