--- a/03_JS/[⭐⭐⭐⭐⭐]-面向对象.md
+++ b/03_JS/[⭐⭐⭐⭐⭐]-面向对象.md
@@ -13,12 +13,12 @@
     > ES5中的构造器是通过构造函数实现的，通过new的方式进行挂载属性。  
     > ES5中的公共方法是通过prototype原型链的挂载实现的。  
     > ES5中的继承是通过call的方式实现的
-    [继承方法](../../images/d23d6f01475602d5a9e5a388e96a86621b9ca6c9411ca1adcf9bcf0a190406e1.png)  
+    [继承方法](../images/d23d6f01475602d5a9e5a388e96a86621b9ca6c9411ca1adcf9bcf0a190406e1.png)  
 - ES6
     > ES6中的构造器是通过class类实现的，通过new的方式进行挂载属性。  
     > ES6中的公共方法是通过extends继承实现的。  
     > ES6中的继承是通过super的方式实现的属性继承
-    [继承方法](../../images/47fd09312ab327208d6fd7f5b105949d5a81c026504983fea3f3efce5c070996.png)  
+    [继承方法](../images/47fd09312ab327208d6fd7f5b105949d5a81c026504983fea3f3efce5c070996.png)  
 
 #### this指向的问题
 - this指向调用者
