--- a/03_JS/[⭐⭐⭐]-交集并集差集.md
+++ b/03_JS/[⭐⭐⭐]-交集并集差集.md
@@ -25,7 +25,7 @@ stateDiagram-v2
   - Array.from是做什么的？
     - 将类数组对象转换为数组对象(带有length并且key为数字的对象)
 - 什么是交集并集差集？
-  - [图解](../../images/7eaec8c54e5763997fe7572ea98449f3a529c8a3900b37fb6d380986d1d8f039.png)  
+  - [图解](../images/7eaec8c54e5763997fe7572ea98449f3a529c8a3900b37fb6d380986d1d8f039.png)  
   - 在JS中如何实现呢？
     ```
       var a = [1,2,3,4,5]
