--- a/03_JS/[⭐⭐⭐⭐⭐]-面向对象.md
+++ b/03_JS/[⭐⭐⭐⭐⭐]-面向对象.md
@@ -38,4 +38,4 @@
   - 实例对象的__proto__指向构造器.prototype
   - 构造器.prototype===构造器.prototype
   - 构造器.prototype.constructor===构造器
-  - 实例对象默认会从.__proto__向原型上查找属性或者方法
+  - 实例对象默认会从.__proto__隐性链式调用构造函数上的方法或者属性。
