--- a/05_算法/[⭐⭐⭐⭐⭐]-四种基本的算法.md
+++ b/05_算法/[⭐⭐⭐⭐⭐]-四种基本的算法.md
@@ -12,9 +12,9 @@
   - 广度优先搜索
 
 ### 总结
-- 排序
+
+- 排序-sort
   - 快速排序
-    -
     ```
     function sorts(arr=[],compare){
       if(!!!arr.length){
@@ -43,4 +43,26 @@
 
       return smallerSorted.concat(equal,largerSorted)
     }
+    ```
+- 递归-用最简单的结构实现，然后再兼容包含child的情况
+  - 案例[深拷贝](../03_JS/[⭐⭐⭐⭐⭐]-API手写.md#深拷贝和浅拷贝)
+- 分类 判读区分，决策树之类的太深触及不到
+- 查找-find等
+  - 二分查找
+    ```
+      function binarySearch(arr = [], target, start = 0, end = arr.length - 1) {
+        if (start > end) {
+          return -1
+        }
+        const mid = Math.floor((start + end) / 2);
+        if (arr[mid] === target) {
+          return mid;
+        }
+        else if (target > arr[mid]) {
+          return search(arr, target, mid + 1, end);
+        }
+        else if (target < arr[mid]) {
+          return search(arr, target, start, mid - 1)
+        }
+      }
     ```
