feat: Update Blob

--- a/03_JS/[⭐⭐⭐]-文件上传.md
+++ b/03_JS/[⭐⭐⭐]-文件上传.md
@@ -40,9 +40,14 @@ flowchart TB
 - 相关的WebApi？
   > Blob、File、FileReader、URL.createObjectURL、FormData... 
   > [点此查看另一个仓库案例](https://github.com/liquidGo/Abstract_Key_Processes/blob/master/src/other/whatIsBinaryObject/01_Blob/index.tsx)
+  > [参考文档](https://zhuanlan.zhihu.com/p/568915443?utm_id=0)
+
+  > ArrayBuffer：将二进制数据存入栈中。
+  ![案例](../images/b3b0ecf82c9220a4fbeaf8753a3d5c70d39162f0e843e675e181628a7b227b34.png)  
 
   > Blob：前端专门用于支持文件操作的二进制对象，他的特点是不可变。
   > new Blob([data], {type: 'image/png'})，第一个参数是一个数组，数组的每一项都是一个二进制数据，第二个参数是一个对象，用来指定MIME类型。
 
+  > File：继承自Blob，扩展了name、lastModified、lastModifiedDate属性，用来表示文件的名称、最后修改时间、最后修改时间戳。
 
 - 二进制上传跟图片是怎样的关系？
