feat: Update Binary Format Info

--- a/03_JS/[⭐⭐⭐]-文件上传.md
+++ b/03_JS/[⭐⭐⭐]-文件上传.md
@@ -50,4 +50,12 @@ flowchart TB
 
   > File：继承自Blob，扩展了name、lastModified、lastModifiedDate属性，用来表示文件的名称、最后修改时间、最后修改时间戳。
 
+  > FileReader：是一个异步的API，用于读取文件提取其内容供进一步使用。可以通过onprogress、onload、onerror、onabort等事件来监听读取过程。
+
+  > URL.createObjectURL：是一个JavaScript函数，用于创建一个指向File对象或者Blob对象的URL。
+
+  > FormData：是一个表单数据对象，用于将表单数据转换成键值对的形式，用于发送到服务器端。可以通过new FormData(formDom)来创建一个FormData对象，也可以通过append方法来添加键值对。
+  > FormData和普通对象的区别：FormData可以上传文件、FormData可以通过方法写入/读取键值对、FormData可以读取form表单的数据。
+
 - 二进制上传跟图片是怎样的关系？
+  > 图片是一种二进制数据，可以通过二进制Blob上传的方式上传到服务器端。
