feat: Insert Corresponding Details Using Lists

--- a/01_CSS/[⭐⭐⭐⭐]-弹性布局.md
+++ b/01_CSS/[⭐⭐⭐⭐]-弹性布局.md
@@ -36,8 +36,8 @@
 2. 在webpack>module>rules>use中配置postcss-loader(这里有多种方式，可自行百度)
 3. 主文件引入lib-flexible
 4. 主目录写入postcss.config.js
-5. 写入配置
-    ```注意有些webpack本地打包不生效
+5. 写入配置：注意有些webpack本地打包不生效
+    ```js
     const PxToRem=require("postcss-pxtorem")
     module.exports={
         plugins:[
