--- a/01_CSS/[⭐⭐⭐⭐⭐]-动画效果.md
+++ b/01_CSS/[⭐⭐⭐⭐⭐]-动画效果.md
@@ -14,7 +14,7 @@
 
 - 使用案例
   - transition：css属性名  过度时间  渐变函数值  延迟时间；
-    ```
+    ```css
     <div
       className={classNames(`box2`, {
         [`box2-toggle`]: visible,
@@ -46,7 +46,7 @@
     ```
 
   - import {Transition} from 'react-transition-group'
-    ```
+    ```js
     const duration = 500;
     const defaultStyle = {
     transition: `opacity ${duration}ms ease-in-out`,
