--- a/06_HTTP/[⭐⭐⭐]-轮询.md
+++ b/06_HTTP/[⭐⭐⭐]-轮询.md
@@ -11,3 +11,16 @@
 
 - 什么是长/短轮询、长连接、WebSocket？
   > [详情]([⭐⭐⭐⭐⭐]-HTTP03_详解HTTP.md#总结)
+
+- 通过Lists插入对应的detail值
+  ```js
+    const asPolling = async (lists = []) => {
+      const newList = await Promise.all(lists.map(async (list) => {
+        const response = await fetch('https://randomuser.me/api')
+        const { results: detail } = await response.json()
+        list.detail = detail
+        return list
+      }))
+      return newList;
+    };
+  ```
