feat: Update Flex

--- a/01_CSS/[⭐⭐⭐⭐⭐]-布局.md
+++ b/01_CSS/[⭐⭐⭐⭐⭐]-布局.md
@@ -16,12 +16,21 @@
   > 脱离文档流：影响了文档流元素的排列顺序，如：float、position、display...
 
 - Float布局有哪些缺点？
-  > 1. 需要清除浮动
-  > 2. 会影响文档流
-  > 3. 需要设置宽度
+  > 1. 影响文档流，会塌陷
+  ![图 0](../images/3446f79958bade3243c72decaa8258df6fe8de33eb431da61d767abd76d62fe9.png)  
+  > 2. 垂直水平居中支持不友好
 
-- Flex布局常用语法以及如何实现九宫格？
-  > flex-direction、flex-wrap、flex-flow、justify-content、align-items、align-content、flex-grow（填满父元素剩余宽度，默认0不平均分剩余宽度）、flex-shrink（子元素超出父元素时如何平分，默认1平均分）、flex-basis、flex
+- Flex布局常用语法以及如何实现九宫格？[案例](https://github.com/liquidGo/Abstract_Key_Processes/blob/master/src/other/Grid_Flex_Style_Layout/index.tsx)
+  - flex-direction、
+  - flex-wrap、
+  - flex-flow、
+  - justify-content、
+  - align-items、
+  - align-content、
+  - flex-grow（填满父元素剩余宽度，默认0不平均分剩余宽度）、
+  - flex-shrink（子元素超出父元素时如何平分，默认1平均分）、
+  - flex-basis（默认会取width当作flex-basis，如果手动设置了flex-basis高优先级）、
+  - flex
 
   - flex是什么的缩写？
     > flex-grow、flex-shrink、flex-basis
