--- a/12_后端/Java/环境配置.md
+++ b/12_后端/Java/环境配置.md
@@ -13,8 +13,8 @@
 - Maven是什么？
   > Maven是一个项目管理工具，可以通过Maven来管理项目的依赖，打包，运行等。
 
-
 - Vscode搭建Java环境？
   > 1. Java Extension Pack
   > 2. JDK：[下载地址](https://www.oracle.com/java/technologies/downloads/#jdk21-mac)
   > 3. 环境变量：/usr/libexec/java_home、setting.json-->"java.home": "/Library/Java/JavaVirtualMachines/jdk-17.0.1.jdk/Contents/Home"（来自于/usr/libexec/java_home）
+  > 4.用Maven创建目录-->删除src目录-->pom.xml把jar改为pom-->添加SpringBoot项目
