--- a/12_后端/Java/环境配置.md
+++ b/12_后端/Java/环境配置.md
@@ -18,3 +18,6 @@
   > 2. JDK：[下载地址](https://www.oracle.com/java/technologies/downloads/#jdk21-mac)
   > 3. 环境变量：/usr/libexec/java_home、setting.json-->"java.home": "/Library/Java/JavaVirtualMachines/jdk-17.0.1.jdk/Contents/Home"（来自于/usr/libexec/java_home）
   > 4.用Maven创建目录-->删除src目录-->pom.xml把jar改为pom-->添加SpringBoot项目
+  > 5.安装Maven，指定mvn位置
+  > 6.main入口继承SpringBootServletInitializer（spring-boot-starter-test）、排除SpringBoot-Tomcat
+  > 7.war包部署
