--- a/12_后端/Java/环境配置.md
+++ b/12_后端/Java/环境配置.md
@@ -21,3 +21,66 @@
   > 5.安装Maven，指定mvn位置
   > 6.main入口继承SpringBootServletInitializer（spring-boot-starter-test）、排除SpringBoot-Tomcat
   > 7.war包部署
+  > 8.下载源替换
+  ```xml
+    <?xml version="1.0" encoding="UTF-8"?>
+    <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+        <!-- localRepository
+        | The path to the local repository maven will use to store artifacts.
+        |
+        | Default: ${user.home}/.m2/repository
+        <localRepository>/path/to/local/repo</localRepository>
+        -->
+        <mirrors>
+            <!-- mirror
+            | Specifies a repository mirror site to use instead of a given repository. The repository that
+            | this mirror serves has an ID that matches the mirrorOf element of this mirror. IDs are used
+            | for inheritance and direct lookup purposes, and must be unique across the set of mirrors.
+            |
+            <mirror>
+              <id>mirrorId</id>
+              <mirrorOf>repositoryId</mirrorOf>
+              <name>Human Readable Name for this Mirror.</name>
+              <url>http://my.repository.com/repo/path</url>
+            </mirror>
+            -->
+    
+            <mirror>
+                <id>alimaven</id>
+                <name>aliyun maven</name>
+                <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+                <mirrorOf>central</mirrorOf>
+            </mirror>
+    
+            <mirror>
+                <id>uk</id>
+                <mirrorOf>central</mirrorOf>
+                <name>Human Readable Name for this Mirror.</name>
+                <url>http://uk.maven.org/maven2/</url>
+            </mirror>
+    
+            <mirror>
+                <id>CN</id>
+                <name>OSChina Central</name>
+                <url>http://maven.oschina.net/content/groups/public/</url>
+                <mirrorOf>central</mirrorOf>
+            </mirror>
+    
+            <mirror>
+                <id>nexus</id>
+                <name>internal nexus repository</name>
+                <!-- <url>http://192.168.1.100:8081/nexus/content/groups/public/</url>-->
+                <url>http://repo.maven.apache.org/maven2</url>
+                <mirrorOf>central</mirrorOf>
+            </mirror>
+    
+        </mirrors>
+    </settings>
+
+  ```
+  > 9.导入其他模块
+    - 1.子模块目录需要和父模块groupId一致
+    - 2.子模块需要引入其他子模块
+    - 3.子模块只需要artifactId
