--- a/01_CSS/[⭐⭐⭐⭐⭐]-布局.md
+++ b/01_CSS/[⭐⭐⭐⭐⭐]-布局.md
@@ -43,3 +43,5 @@
   - grid-row-start（开始行
   - grid-row-end（结束行
   - grid-area（grid-row-start / grid-column-start / grid-row-end / grid-column-end
+  - justify-items（水平对齐方式
+  - align-items（垂直对齐方式
