--- a/03_JS/[⭐⭐⭐⭐⭐]-遍历方法.md
+++ b/03_JS/[⭐⭐⭐⭐⭐]-遍历方法.md
@@ -25,22 +25,27 @@
 - 数据结构常用的原生方法有哪些？
   > 数组：
     - 增：push、unshift、splice
-      - push/unshift：从前后插入返回数组长度
-      - splice：(开始位置，删除个数，插入的元素)返回删除的元素。可实现替换、删除、插入
+      > push/unshift：从前后插入返回数组长度
+      > splice：(开始位置，删除个数，插入的元素)返回删除的元素。可实现替换、删除、插入
     - 删：pop、shift、splice
-      - pop/shift：从前后删除返回删除的元素
-      - splice：(开始位置，删除个数，插入的元素)返回删除的元素。可实现替换、删除、插入
+      > pop/shift：从前后删除返回删除的元素
+      > splice：(开始位置，删除个数，插入的元素)返回删除的元素。可实现替换、删除、插入
     - 改：splice
-      - splice：(开始位置，删除个数，插入的元素)返回删除的元素。可实现替换、删除、插入
-      - sort：(a,b)=>{return a-b}从小到大排序[实现](../05_算法/[⭐⭐⭐⭐⭐]-四种基本的算法.md)
+      > splice：(开始位置，删除个数，插入的元素)返回删除的元素。可实现替换、删除、插入
+
+      > sort：(a,b)=>{return a-b}从小到大排序[实现](../05_算法/[⭐⭐⭐⭐⭐]-四种基本的算法.md)
+  
+      > flat/flatMap：(层数)将多维数组转换成一维数组
     - 查：indexOf、lastIndexOf、includes、find、findIndex、filter、forEach、some、every、map、reduce、reduceRight
-      - some：只要有一个满足条件就返回true
-      - every：只有全部满足条件才返回true
-      - reduce：((上一个的累加值，当前值，当前索引，原数组)=>{return 返回累加值},初始值)
+      > some：只要有一个满足条件就返回true
+      > every：只有全部满足条件才返回true
+      > reduce：((上一个的累加值，当前值，当前索引，原数组)=>{return 返回累加值},初始值)
+
+
   > 对象：
     - 增：obj[key]=value、Object.assign(obj,{key:value})、Object.defineProperty(obj,key,{value:value,enumerable:true})
-      - Object.assign：合并对象，后面的对象会覆盖前面的对象，属于浅拷贝，目标对象的地址会被改变。
-      - Object.defineProperty（vue2响应式实现原理）：(对象，属性名，{value:value,enumerable:true,get(){},set(){}})，enumerable为true的时候才可以被枚举，也就是可以被遍历。在set的时候调用update方法，更新视图。
+      > Object.assign：合并对象，后面的对象会覆盖前面的对象，属于浅拷贝，目标对象的地址会被改变。
+      > Object.defineProperty（vue2响应式实现原理）：(对象，属性名，{value:value,enumerable:true,get(){},set(){}})，enumerable为true的时候才可以被枚举，也就是可以被遍历。在set的时候调用update方法，更新视图。
     - 删：delete obj[key]
     - 改：obj[key]=value、Object.keys(obj)、Object.values(obj)、Object.entries(obj)将对象的键值对转换成数组
     - 查：obj[key]、obj.key
