feat: Update 冒泡

--- a/09_REACT/[⭐⭐⭐⭐⭐]-事件代理&冒泡.md
+++ b/09_REACT/[⭐⭐⭐⭐⭐]-事件代理&冒泡.md
@@ -5,4 +5,5 @@
   > [详情](./[⭐⭐⭐⭐⭐]-useState是同步还是异步.md#流程)
 
 - 先冒泡还是先捕获？
-  > 以addEventListener的第三个参数为准，true为捕获，false为冒泡
+  > 以addEventListener的第三个参数为准，true为捕获，false为冒泡    
+  > 标准W3C事件流：捕获阶段 -> 目标阶段 -> 冒泡阶段
