feat: Update Css 二倍图

--- a/01_CSS/[⭐⭐⭐⭐]-像素&分辨率.md
+++ b/01_CSS/[⭐⭐⭐⭐]-像素&分辨率.md
@@ -10,11 +10,14 @@
 
 ### 总结
 - 什么是像素？
-  > 像素是显示器上最小的显示单位，是一个点，是一个最小的方块。    
+  > 像素是显示器上最小的显示单位，是一个点，是一个最小的方块。 
+
 - 什么是分辨率？
   > 分辨率是指屏幕上横纵向上的像素点数，如1920x1080，就是横向有1920个像素点，纵向有1080个像素点。 
+
 - 什么是物理像素？什么是逻辑像素？
   > 物理像素就是屏幕上的一个点，逻辑像素就是css中的一个像素，逻辑像素是相对于物理像素而言的，逻辑像素是css中的一个单位，物理像素是屏幕上的一个点。    
-  > 可以理解为最开始1CSS像素 = 1物理像素，由于视网膜屏幕的出现，可以把更多的物理像素压缩到一块屏幕里，以提升画面的细腻程度   
+  > 可以理解为最开始1CSS像素 = 1物理像素，由于视网膜屏幕的出现，可以把更多的物理像素压缩到一块屏幕里，以提升画面的细腻程度，这样就出现了1CSS像素 = 2物理像素，1CSS像素 = 3物理像素，这样的情况。    
+
 - 什么是二倍图三倍图？
-  > 二倍图就是在一倍图的基础上，横向和纵向都放大两倍，三倍图就是在一倍图的基础上，横向和纵向都放大三倍。    
+  > 逻辑像素就是屏幕的分辨率不会改变，改变的是物理像素，原来一个逻辑像素对应一个物理像素，屏幕升级后屏幕没变大但是，原来的一个物理像素变成了两个物理像素，那么二倍图就是两个物理像素的尺寸，我们/2的目的就是拿到逻辑像素，用px等单位显示在UI上面。
