--- a/01_CSS/[⭐⭐⭐⭐]-像素&分辨率.md
+++ b/01_CSS/[⭐⭐⭐⭐]-像素&分辨率.md
@@ -21,3 +21,8 @@
 
 - 什么是二倍图三倍图？
   > 逻辑像素就是屏幕的分辨率不会改变，改变的是物理像素，原来一个逻辑像素对应一个物理像素，屏幕升级后屏幕没变大但是，原来的一个物理像素变成了两个物理像素，那么二倍图就是两个物理像素的尺寸，我们/2的目的就是拿到逻辑像素，用px等单位显示在UI上面。
+
+- 什么是响应式布局？跟物理像素和逻辑像素有什么关系？
+  > 响应式布局就是根据不同的设备，自动调整页面的布局，使其在不同的设备上显示的效果都很好。    
+- 为什么以iphone6作为标准视图？
+  > 因为iphone6的物理像素和逻辑像素是一样的，所以以iphone6作为标准视图，可以让我们在开发的时候更加方便，不用考虑物理像素和逻辑像素的转换。
