feat: Update Position

--- a/01_CSS/[⭐⭐]-块级格式化上下文.md
+++ b/01_CSS/[⭐⭐]-块级格式化上下文.md
@@ -1,6 +1,6 @@
 ## BFC块级格式化上下文
 
-### 什么是块级格式化上下文？
+### 什么是块级格式化上下文？?
 
 - BFC(Block formatting context)直译为"块级格式化上下文"。它是一个独立的渲染区域，只有块级元素参与， 它规定了内部的块级元素如何布局，并且与这个区域外部毫不相干。外部元素也不会影响这个渲染区域内的元素。
 
@@ -9,9 +9,7 @@
 ### BFC遵循什么规则？
 - 默认，内部的块元素会在垂直方向，一个接一个地放置。每个块元素独占一行
 
-- 块元素垂直方向的总距离由margin决定。属于同一个BFC的两个相邻块元素在垂直  
-
-- 方向上的margin会发生重叠/合并。但水平方向的margin不会
+- 块元素垂直方向的总距离由margin决定。属于同一个BFC的两个相邻块元素在垂直方向上的margin会发生重叠/合并。但水平方向的margin不会
 
 - 左侧BFC渲染区域的margin，必须与右侧BFC渲染区域的margin相衔接，不能出现重叠
 
