--- a/01_CSS/[⭐⭐⭐⭐]-弹性布局.md
+++ b/01_CSS/[⭐⭐⭐⭐]-弹性布局.md
@@ -33,6 +33,8 @@
 
 > 在webpack中配置pxToRem
 1. 安装postcss-pxtorem lib-flexible
+  - postcss-pxtorem：将px转换成rem，根据rootValue进行转换
+  - lib-flexible：分辨率/10=37.5px
 2. 在webpack>module>rules>use中配置postcss-loader(这里有多种方式，可自行百度)
 3. 主文件引入lib-flexible
 4. 主目录写入postcss.config.js
@@ -42,7 +44,7 @@
     module.exports={
         plugins:[
             PxToRem({
-                rootValue:16,
+                rootValue:37.5,
                 propList:["*"],
                 ...剩余属性参考官网配置
             })
