--- a/01_CSS/[⭐⭐⭐⭐⭐]-动画效果.md
+++ b/01_CSS/[⭐⭐⭐⭐⭐]-动画效果.md
@@ -10,84 +10,60 @@
 ### 总结
 - 什么是CSS的动画效果？有哪些实现的方式？
   > CSS动画：通过动态改变CSS样式来实现动画效果。
-  > 常见实现方式：transition、animation+@keyframes+CSSTransition、JS+CSS
+  > 常见实现方式：transition、animation、CSSTransition
 
 - 使用案例
   - transition：css属性名  过度时间  渐变函数值  延迟时间；
+    
     ```css
-    <div
-      className={classNames(`box2`, {
-        [`box2-toggle`]: visible,
-      })}
-    />
-    <button
-      onClick={() => {
-        setVisible(!visible);
-      }}
-    >
+    <div className={"box2"} />
+    <button onClick={() => setVisible(!visible)}>
       切换可见性
     </button>   
     
-    .box,
     .box2 {
       width: 100px;
       height: 100px;
       background-color: red;
-    }
-
-    .box2 {
       opacity: 1;
       transition: opacity 0.5s ease-in-out;
     }
-
+    
     .box2-toggle {
       opacity: 0;
     }
     ```
-
-  - import {Transition} from 'react-transition-group'
-    ```js
-    const duration = 500;
-    const defaultStyle = {
-    transition: `opacity ${duration}ms ease-in-out`,
-    opacity: 1,
-    };
-
-    const transitionStyles = {
-    entering: { opacity: 0 },
-    entered: { opacity: 0 },
-    exiting: { opacity: 1 },
-    exited: { opacity: 1 },
-    };
-
-    const [isVisible, setIsVisible] = useState(false);
-
-    const toggleVisibility = () => {
-    setIsVisible(!isVisible);
-    };
-    <Transition in={isVisible} timeout={0} classNames="fade">
-      {(state) => (
-        <div
-          className="box"
-          style={{
-            ...defaultStyle,
-            ...transitionStyles[state],
-          }}
-        >
-          {state}
-        </div>
-      )}
-    </Transition>
-    <button onClick={toggleVisibility}>切换可见性</button>
-    ```
-
-  - animation+@keyframes+CSSTransition
-    - [CSS](../images/efb27e2229991ab6d39d8a517c295da31550fc341490791923a949197ee2b0fa.png)
-    - [tsx](../images/b634c8543fc53f647ff2f622f78b6e2fd394edc5992ac499d197c847f11d6feb.png)  
-
-
-
     
+  - animation：动画名称，总时长（包括延迟），函数效果，延迟时间，执行次数，结束后的状态
+  
+    - ```html
+      <div class="hover"/>
+      .hover{
+        width:100px;
+        height:100px;
+        background:red;
+      }
+      
+      .hover:hover{
+        animation:change 4s linear forwards 0s normal forwards;
+      }
+      
+      @keyframes change{
+        0%{
+          background:yellow;
+        }
+        
+        100%{
+          background:blue;
+        }
+      }
+      ```
+  
+    - 
+
+
+
+
 - 哪些常用的动画效果？
   > ease渐快，匀速，减慢cubic-bezier(0.25,0.1,0.25,1)
 
@@ -99,18 +75,4 @@
 
   > linear全程匀速cubic-bezier(0,0,1,1)
 
-- 其他设置方法？
-  > 通过classnames库来设置className的值，通过设置className的值来实现动画效果。
-
-  > 通过animation+@keyframes来实现动画效果。
-    ```
-      @keyframes mymove {
-        from {top: 0px;}
-        to {top: 200px;}
-      }
-
-      div {
-        animation: mymove 5s infinite;
-        -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
-      }
-    ```
+  
