--- a/02_HTML/[⭐⭐⭐⭐]-浏览器缓存机制.md
+++ b/02_HTML/[⭐⭐⭐⭐]-浏览器缓存机制.md
@@ -1,22 +1,28 @@
 ## 浏览器缓存机制
 
-### 相关分解
+### MindMap
 
 - 什么是强缓存？
 - 什么是协商缓存？
 - 如何判断强缓存还是协商缓存？
 - 缓存机制起什么作用？
 
-### 相似之处
 
-    强制缓存和协商缓存使用方式本质上是一样的，都是判断缓存是否有效再决定是否使用缓存。
 
-### 问题点
+### StateDiagram
 
-- Last-Modified/Etag？
-- Expires/Cache-Control？
+```mermaid
+stateDiagram-v2
+state 浏览器缓存机制{
+[*]-->默认缓存
+默认缓存-->更新缓存: 如何使用的默认缓存？何时更新的缓存？使用了怎样的机制？Last-Modified/Etag？Expires/Cache-Control？
+更新缓存-->[*]
+}
+```
 
-### 总结
+
+
+### Flowchart
 
 #### 什么是强缓存/协商缓存？
 
@@ -31,7 +37,10 @@
 > 浏览器缓存会根据响应头中的字段进行判断，如果不存在强缓存就使用协商缓存。
 
 - 强缓存（Cache-Control>Expires 优先级）
-  - Expires：http1.0 的规范，返回一个绝对的 GMT 失效时间（较少使用，存在跨区的话可能会存在服务器时间不同，从而导致缓存不准确的问题，比较广泛使用的是 Cache-Control）
+  
+  > 如果触发了强制缓存，就不会发起请求。失效了以后才会去跟服务器比较资源，使用协商缓存。
+  
+  - Expires：http1.0 的规范（在http1.1中已经被Cache-Control替换），返回一个绝对的 GMT 失效时间（较少使用，存在跨区的话可能会存在服务器时间不同，从而导致缓存不准确的问题，比较广泛使用的是 Cache-Control）
   - Cache-Control：http1.1 新增规范，通过设置 max-age 有效期进行缓存判断，除了 max-age 还有：
     - no-cache：不使用本地缓存。需要使用缓存协商，先与服务器确认返回的响应是否被更改，如果之前的响应中存在 ETag，那么请求的时候会与服务端验证，如果资源未被更改，则可以避免重新下载。
     - no-store：直接禁止游览器缓存数据，每次用户请求该资源，都会向服务器发送一个请求，每次都会下载完整的资源。
@@ -47,18 +56,5 @@
 
 #### 总结流程图
 
-<!-- ```tefcha
-浏览器请求
-通过Cache-Control/expires判断是否有强缓存
-max-age、expires服务器绝对时间是否未过期
-if 没有过期
-    直接使用强缓存
-else
-    比对响应Etag/Last-Modified是否相同
-    if 相同
-        返回304，调用缓存
-    else
-        返回200，本地存入缓存
-响应
-``` -->
 <img style="width:50vw" src="http://24k.live/common/github/html/browserCache.png" />
+
