--- a/03_JS/[⭐⭐⭐]-文件上传.md
+++ b/03_JS/[⭐⭐⭐]-文件上传.md
@@ -1,6 +1,6 @@
-## 前端文件上传
+# 前端文件上传
 
-### MindMap
+## MindMap
 - 什么是二进制上传？
 - 二进制上传跟图片是怎样的关系？
 - 都有哪些原生的api？
@@ -10,40 +10,56 @@
 - 什么是MIME类型？
 - ant design upload组件的实现原理？
 
-## 抽象
+## StateDiagram
 ```mermaid
----
-title: 状态图
----
 stateDiagram-v2
-[*]-->了解: 这些原生的API是基于什么，需要知道什么内容
-了解-->渲染到界面上: 使用这些原生API
+state 文件上传{
+[*]-->input: 通过input拿到二进制文件
+input-->拿到二进制File: 通过监听input onchange
+拿到二进制File-->存入FormData对象中
+存入FormData对象中-->ajax交互
+ajax交互-->[*]
+}
 ```
 
-```mermaid
----
-title: 细分
----
-flowchart TB
-二进制-->Blob-->File
-```
 
-### 总结
+
+## Flowchart
+
+#### Input取二进制文件
+
+- 原生input表单的type="file"支持接收二进制的文件
+
+  - ​	<img src="./assets/image-20240325184753970.png" alt="image-20240325184753970" style="zoom:25%;" />
+
 - 什么是二进制上传？
+
   > 计算机是二机制的世界，字节(Byte/B)作为二机制的基本单位，1个字节有8个二机制位，即8bit。
   > 一个字节有256种状态，取值从00000000～11111111。
 
 - 什么是MIME类型？
+
   > MIME类型是描述消息内容类型的标准，用来表示文档、文件或字节流的性质和格式。有两个分类：MIME媒体类型和MIME子类型。
   > 常见的MIME类型有：text/html、text/plain、image/jpeg、image/png、image/gif、application/json、application/javascript、application/pdf、application/zip、application/octet-stream、multipart/form-data等。
 
+- 二进制上传跟图片是怎样的关系？
+
+  > 图片是一种二进制数据，可以通过二进制Blob上传的方式上传到服务器端。
+
+#### 上传二进制
+
+- 拿到二进制文件以后创建FromData对象，存储file文件，上传至服务端。
+
+  - <img src="./assets/image-20240325184835867.png" alt="image-20240325184835867" style="zoom:25%;" />
+
 - 相关的WebApi？
+
   > Blob、File、FileReader、URL.createObjectURL、FormData... 
   > [点此查看另一个仓库案例](https://github.com/liquidGo/Abstract_Key_Processes/blob/master/src/other/whatIsBinaryObject/01_Blob/index.tsx)
   > [参考文档](https://zhuanlan.zhihu.com/p/568915443?utm_id=0)
 
   > ArrayBuffer：将二进制数据存入栈中。
-  ![案例](../images/b3b0ecf82c9220a4fbeaf8753a3d5c70d39162f0e843e675e181628a7b227b34.png)  
+  > ![案例](../images/b3b0ecf82c9220a4fbeaf8753a3d5c70d39162f0e843e675e181628a7b227b34.png)  
 
   > Blob：前端专门用于支持文件操作的二进制对象，他的特点是不可变。
   > new Blob([data], {type: 'image/png'})，第一个参数是一个数组，数组的每一项都是一个二进制数据，第二个参数是一个对象，用来指定MIME类型。
@@ -57,5 +73,3 @@ flowchart TB
   > FormData：是一个表单数据对象，用于将表单数据转换成键值对的形式，用于发送到服务器端。可以通过new FormData(formDom)来创建一个FormData对象，也可以通过append方法来添加键值对。
   > FormData和普通对象的区别：FormData可以上传文件、FormData可以通过方法写入/读取键值对、FormData可以读取form表单的数据。
 
-- 二进制上传跟图片是怎样的关系？
-  > 图片是一种二进制数据，可以通过二进制Blob上传的方式上传到服务器端。
