--- a/14性能优化专项/[⭐⭐⭐⭐⭐]-性能优化.md
+++ b/14性能优化专项/[⭐⭐⭐⭐⭐]-性能优化.md
@@ -10,6 +10,12 @@
 
 ## Gzip压缩
 
+### 什么是Gzip压缩
+
+> IE6和Firefox都支持客户端gzip。在传输网页之前，先用gzip压缩，然后传输到客户端。客户端收到后，通过浏览器解压显示。
+
+[百度知道](https://zhidao.baidu.com/question/1616312391774835307.html)
+
 ## Webpack
 
 ## Nginx
