--- a/14性能优化专项/[⭐⭐⭐⭐⭐]-性能优化.md
+++ b/14性能优化专项/[⭐⭐⭐⭐⭐]-性能优化.md
@@ -12,7 +12,13 @@
 
 ### 什么是Gzip压缩
 
-> IE6和Firefox都支持客户端gzip。在传输网页之前，先用gzip压缩，然后传输到客户端。客户端收到后，通过浏览器解压显示。
+1. 浏览器请求url，并在请求头中设置属性accept-encoding: gzip。这表明该浏览器是支持gzip，该参数浏览器在请求资源时会自动带上。
+
+2. 服务器在接收到浏览器发送的请求之后，服务器会返回压缩后的文件，并在响应头重包含content-encoding: gzip。若是没有gzip文件，会返回为压缩的文件。
+
+3. 浏览器接收到服务器的响应之后，根据content-encoding: gzip响应头使用gzip策略解压压缩后的资源，通过content-type内容类型决定怎么编码读取该文件内容。
+
+![alt text](image.png)
 
 [百度知道](https://zhidao.baidu.com/question/1616312391774835307.html)
 
