--- a/14性能优化专项/[⭐⭐⭐⭐⭐]-性能优化.md
+++ b/14性能优化专项/[⭐⭐⭐⭐⭐]-性能优化.md
@@ -21,6 +21,12 @@
 ![alt text](image.png)
 
 [百度知道](https://zhidao.baidu.com/question/1616312391774835307.html)
+```javascript
+/**
+ * 执行HTML入口文件-->遇到<script>标签请求服务器js资源-->请求头开启gzip-->服务端返回压缩的gzip文件-->客户端解压gzip资源为js，总体是这个流程吗？
+ */
+
+```
 
 ## Webpack
 
